Prevent scrolling on iphone

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -8,6 +8,8 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  overflow: hidden;
 }
 article,
 aside,
