--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -3,8 +3,8 @@ $socialLinkSize: 3rem;
 
 // COLORS //
 $gray: #666666;
-$blue: #7ECCF7;
-$white:#fff;
+$blue: #7eccf7;
+$white:#ffffff;
 
 ul {
 	list-style: none;
